# matrix-clock

./: .gitignore  .prettierignore  .prettierrc  README.md  eslint.config.mjs  index.html  package.json  steiger.config.mts  tsconfig.json  vite.config.mts
.husky/: pre-push
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: index.tsx
src/app/providers/: index.ts
src/app/providers/moscow-time/: index.ts
src/app/providers/moscow-time/model/: context.ts  types.ts
src/app/providers/moscow-time/ui/: index.ts
src/app/providers/moscow-time/ui/moscow-time-provider/: index.tsx
src/app/styles/: index.scss
src/app/styles/helpers/: _index.scss  _mixins.scss
src/clock/: index.ts
src/clock/model/: index.ts  lib.ts  types.ts  use-matrix-rain.ts
src/clock/ui/: index.tsx
src/clock/ui/matrix-background/: index.tsx
src/clock/ui/matrix-clock/: index.tsx
src/clock/ui/matrix-rain/: index.module.scss  index.tsx
src/clock/ui/moscow-time-provider/: index.tsx
src/entities/moscow-time/: index.ts
src/entities/moscow-time/model/: index.ts
src/pages/clock/model/: index.ts  types.ts
src/pages/clock/ui/: index.tsx
src/pages/clock/ui/matrix-clock/: index.module.scss  index.tsx
src/shared/ui/matrix-background/: index.module.scss  index.tsx
src/shared/ui/matrix-rain/: index.tsx
