[package]
name = "matrix-clock"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
rand = "0.8"
chrono = { version = "0.4", features = ["clock"] }
chrono-tz = "0.9"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true

[features]
default = []
